refactor: modify logic change Password and add forgot-pass to swagger
